main/default/objects/Fleet_Resale_Calculation__c/Fleet_Resale_Calculation__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Fleet Resale Calculation</label>
</CustomObject>