main/default/objects/Fleet_Resale_Calculation__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>