main/default/objects/Fleet_Resale_Calculation__c/fields/Value_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Value_Metrics__c</fullName>
    <label>Value Metrics</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>